--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "todo-final-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://birunidev.github.io/react-todo-list-tdd",
   "dependencies": {
     "@heroicons/react": "^1.0.6",
     "@testing-library/jest-dom": "^5.16.4",
@@ -17,7 +18,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "npm run build && gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -39,6 +41,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
+    "gh-pages": "^4.0.0",
     "msw": "^0.42.1",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.2"
